@@ -48,7 +48,7 @@ CYGBUILD_NAME="cygbuild"
 
 #  Automatically updated by the developer's editor on save
 
-CYGBUILD_VERSION="2015.0216.0549"
+CYGBUILD_VERSION="2015.0216.2222"
 
 #  Used by the 'cygsrc' command to download official Cygwin packages
 #  listed at http://cygwin.com/packages
@@ -1257,12 +1257,23 @@ function CygbuildBootVariablesGlobalMain()
      $cygbuild_opt_exclude_version_control \
     "
 
+    # Ignore also libtool files generated by:
+    # libtoolize --force --copy --install
     cygbuild_opt_exclude_cache_files="\
      --exclude=config.guess \
      --exclude=config.sub \
      --exclude=config.cache \
      --exclude=config.status \
      --exclude=config.log \
+     --exclude=ltmain.sh \
+     --exclude=install-sh \
+     --exclude=depcomp \
+     --exclude=missing \
+     --exclude=compile \
+     --exclude=libtool.m4 \
+     --exclude=ltoptions.m4 \
+     --exclude=ltsugar.m4 \
+     --exclude=ltversion.m4 \
      --exclude=*.cache \
      --exclude=autom4te.cache \
     "
@@ -4308,6 +4319,7 @@ $DIR_CYGPATCH/postinstall-$CYGBUILD_FILE_MANIFEST_DATA
     SCRIPT_DIFF_BEFORE_CYGFILE=$DIR_CYGPATCH/diff-before.sh     # global-def
     SCRIPT_DIFF_CYGFILE=$DIR_CYGPATCH/diff.sh                   # global-def
 
+    SCRIPT_CONFIGURE_BEFORE_CYGFILE=$DIR_CYGPATCH/configure-before.sh # global-def
     SCRIPT_CONFIGURE_CYGFILE=$DIR_CYGPATCH/configure.sh         # global-def
     SCRIPT_BUILD_CYGFILE=$DIR_CYGPATCH/build.sh                 # global-def
     SCRIPT_CLEAN_CYGFILE=$DIR_CYGPATCH/clean.sh                 # global-def
@@ -9167,7 +9179,7 @@ function CygbuildConfPerlMain()
 
 function CygbuildCmdConfAutomake()
 {
-    [ ! -f configure ]  ||  return 0
+    [ -f configure   ]  &&  return 0
     [ -f makefile.am ]  ||  return 0
     [ -f Makefile.am ]  ||  return 0
 
@@ -9220,6 +9232,20 @@ function CygbuildCmdConfConfigFilesCopy()
     done
 }
 
+function CygbuildCmdConfBefore()
+{
+    local id="$0.$FUNCNAME"
+    local file="$SCRIPT_CONFIGURE_BEFORE_CYGFILE"
+
+    [ -f "$file" ] || return 0
+
+    #   If there is custom script, run it.
+    CygbuildEcho "--- Running external:" ${file#$srcdir/}
+
+    CygbuildChmodExec $file
+    ${debug:+$BASHX} $file
+}
+
 function CygbuildCmdConfMain()
 {
     local id="$0.$FUNCNAME"
@@ -9241,6 +9267,7 @@ function CygbuildCmdConfMain()
 
         CygbuildCmdConfConfigFilesCopy
         CygbuildCmdConfAutomake || return 1
+        CygbuildCmdConfBefore || return 1
 
         CygbuildVerb "-- Configuring in" ${builddir#$srcdir/}
 
